# android-sdl3-template

./: .gitmodules  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/sdl3/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  main.cpp  native-lib.cpp
app/src/main/java/com/example/sdl3/: MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/sdl3/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
